V0.6 ADDED BorrowController & some minor changes