@@ -8,7 +8,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BorrowMapper {
@@ -40,6 +39,6 @@ public class BorrowMapper {
     public List<BorrowDto> mapToBorrowDtoList(List<Borrow> borrowList) {
         return borrowList.stream()
                 .map(this::mapToBorrowDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
